--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </style>
   </head>
   <body>
+    <marqee style="font-size:30px">I saw your message Esben, thank you!</marquee>
     <image src="https://i.kym-cdn.com/photos/images/original/001/387/163/945.png"/>
   </body>
 </html>
