--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <style>
       img {
         width:calc(100vw - 35px);
+        margin-top:30px;
       }
     </style>
   </head>
   <body>
     <marquee style="font-size:30px">I saw your message Esben, thank you!</marquee>
+    
     <image src="https://i.kym-cdn.com/photos/images/original/001/387/163/945.png"/>
   </body>
 </html>
