--- a/index.html
+++ b/index.html
@@ -6,10 +6,18 @@
         width:calc(100vw - 35px);
         margin-top:30px;
       }
+     #grad1 {
+    height: 200px;
+    background: red; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(left, orange , yellow, green, cyan, blue, violet); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(right, orange, yellow, green, cyan, blue, violet); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(right, orange, yellow, green, cyan, blue, violet); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(to right, orange , yellow, green, cyan, blue, violet); /* Standard syntax (must be last) */
+}
     </style>
   </head>
   <body>
-    <marquee style="font-size:30px">I saw your message Esben, thank you!</marquee>
+    <marquee id="grad1" style="font-size:30px">I saw your message Esben, thank you!</marquee>
     
     <image src="https://i.kym-cdn.com/photos/images/original/001/387/163/945.png"/>
   </body>
