--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </style>
   </head>
   <body>
-    <marquee> <span id="grad1" style="font-size:30px">I saw your message Esben, thank you!</span></marquee>
+    <!--<marquee> <span id="grad1" style="font-size:30px">I saw your message Esben, thank you!</span></marquee>-->
     
     <image src="https://i.kym-cdn.com/photos/images/original/001/387/163/945.png"/>
   </body>
