--- a/peace/index.html
+++ b/peace/index.html
@@ -1,7 +1,14 @@
 <html>
   <head>
     <title>PEACE WAS NEVER AN OPTION</title>
+  <style>
+      img {
+        width:calc(100vw - 35px);
+        margin-top:30px;
+      }
+  </style>
   </head>
   <body>
+    <image src="goose.jpg"/>
   </body>
 </html>
