--- a/wizard/index.html
+++ b/wizard/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>    
     <video>
-      <source src="https://i.imgur.com/VkV9Jop.webm" type="video/webm">
+      <source src="https://i.imgur.com/VkV9Jop.mp4" type="video/mp4">
     </video>
   </body>
 </html>
