--- a/wizard/index.html
+++ b/wizard/index.html
@@ -9,7 +9,7 @@
     </style>
   </head>
   <body>    
-    <video preload="auto" autoplay="autoplay" loop="loop">
+    <video preload="auto" muted="true" autoplay="autoplay" loop="loop">
       <source src="https://i.imgur.com/VkV9Jop.mp4" type="video/mp4">
     </video>
   </body>
