add meta tag to update deploy
see if redeploying fixes ssl error

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Geese.wtf</title>
+    <meta charset="UTF-8">
     <style>
       img {
         width:calc(100vw - 35px);
